# aerleon_pandas_webinar

./: 1_excel_to_pandas.py  2_pandas_to_aerleon.py  3_aerleon_render.py  README.md  firewall_flows.xlsx  icecream.py  pyproject.toml  runbook.md
