[tool.poetry]
name = "automating-acl-webinar"
version = "0.1.0"
description = ""
authors = ["Rick Donato <rick.donato@packetcoders.io>"]
readme = "README.md"
packages = [{include = "automating_acl_webinar"}]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^8.13.2"
pandas = "^2.0.1"
aerleon = "^1.2.3"
rich = "^13.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
